WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279879
[CMake][WPE] ENABLE_WPE_PLATFORM cannot be toggled
https://bugs.webkit.org/show_bug.cgi?id=279879
Summary
[CMake][WPE] ENABLE_WPE_PLATFORM cannot be toggled
Adrian Perez
Reported
2024-09-18 02:03:29 PDT
Passing -DENABLE_WPE_PLATFORM=OFF in the command line doesn't work because of this: SET_AND_EXPOSE_TO_BUILD(ENABLE_WPE_PLATFORM ${ENABLE_2022_GLIB_API}) We should make the variable an actual option that can be toggled from the CMake command line.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-09-18 02:26:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33819
EWS
Comment 2
2024-09-18 07:12:21 PDT
Committed
283838@main
(f1c3da45ac41): <
https://commits.webkit.org/283838@main
> Reviewed commits have been landed. Closing PR #33819 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug