[CMake][WPE] ENABLE_WPE_PLATFORM cannot be toggled https://bugs.webkit.org/show_bug.cgi?id=279879

Reviewed by Carlos Garcia Campos.

Use WEBKIT_OPTION_DEFINE() to define ENABLE_WPE_PLATFORM, defaulting to
enabled for developer builds. Ensure that the option cannot be enabled
with the old 1.1 API with WEBKIT_OPTION_CONFLICT(), because WPEPlatform
uses functionality from the 2.0 API. While at it, fix a build failure
with ENABLE_WPE_PLATFORM=OFF.

* Source/WebKit/UIProcess/API/glib/WebKitWebView.h.in: Replace an
  ENABLE(2022_GLIB_API) guard with ENABLE(WPE_PLATFORM) around functions
  that are available only when building the WPEPlatform library.
* Source/WebKit/UIProcess/API/wpe/WebKitWebViewWPE.cpp: Ditto.
* Source/cmake/OptionsWPE.cmake: Define option.

Canonical link: https://commits.webkit.org/283838@main